<resources>
    <string name="app_name">OffersTest</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_responce">Отклики</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>

    <string name="title_entry">Вход в личный кабинет</string>
    <string name="title_validation">Ввод кода</string>
</resources>