<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_entry"
    >

    <fragment
        android:id="@+id/navigation_entry"
        android:name="com.tests.offerstest.ui.fragments.entry.EntryFragment"
        android:label="@string/title_entry"
        tools:layout="@layout/fragment_entry">

        <action
            android:id="@+id/action_entryFragment_to_verificationFragment"
            app:destination="@id/navigation_verification" />
    </fragment>

    <fragment
        android:id="@+id/navigation_verification"
        android:label="@string/title_validation"
        android:name="com.tests.offerstest.ui.fragments.verification.VerificationFragment"
        tools:layout="@layout/fragment_verification" >

        <action
            android:id="@+id/action_verificationFragment_to_offersFragment"
            app:destination="@+id/navigation_search"
            />

    </fragment>

    <fragment
        android:id="@+id/navigation_card_vacancy"
        android:name="com.tests.offerstest.ui.fragments.cardvacancy.CardVacancy"
        android:label="Карточка вакансии"
        tools:layout="@layout/fragment_card_vacancy"/>


    <fragment
        android:id="@+id/navigation_code_verification"
        android:name="com.tests.offerstest.ui.fragments.verification.VerificationFragment"
        android:label="@string/title_entry"
        tools:layout="@layout/fragment_verification"/>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.tests.offerstest.ui.fragments.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_plug" />

    <fragment
        android:id="@+id/navigation_responce"
        android:name="com.tests.offerstest.ui.fragments.responses.ResponceFragment"
        android:label="@string/title_responce"
        tools:layout="@layout/fragment_responce" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.tests.offerstest.ui.fragments.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_vacantionsFragment_to_vacancyDetailFragment"
            app:destination="@+id/navigation_card_vacancy"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.tests.offerstest.ui.fragments.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_plug" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tests.offerstest.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_plug" />


    <include
        app:graph="@navigation/mobile_navigation_feature_vacantions" />
</navigation>